--- a/mysql/templates/manifest.yaml
+++ b/mysql/templates/manifest.yaml
@@ -39,4 +39,4 @@ spec:
   - name: mysql-port
     protocol: TCP
     port: 3306 # service port
-    targetport: 3306 #container port
+    targetPort: 3306 #container port
