--- a/backend/templates/hpa.yaml
+++ b/backend/templates/hpa.yaml
@@ -11,4 +11,4 @@ spec:
    name: backend
  minReplicas: 1
  maxReplicas: 10
- targetCPUUtilizationPercentage: {{ .Vlaue.hpa.cpuutlization }} # usually 75 in real environment
+ targetCPUUtilizationPercentage: {{ .Values.hpa.cpuutlization }} # usually 75 in real environment
