--- a/frontend/templates/deployment.yaml
+++ b/frontend/templates/deployment.yaml
@@ -39,7 +39,7 @@ metadata:
   namespace: expense
 spec:
   type: LoadBalancer
-  selectors:
+  selector:
     app: frontend
     tier: web
     project: expense
