--- a/nginx/templates/manifest.yaml
+++ b/nginx/templates/manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
+  namespace: expense
   labels:
     tier: frontend
     app: nginx
@@ -25,6 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
+  namespace: expense
 spec:
   type: {{ .Values.service.type }}
   selector:
